@@ -6,12 +6,15 @@ from qgis.PyQt.QtGui import *
 from eotimeseriesviewer.tests import initQgisApplication
 
 app = initQgisApplication()
+
 from eotimeseriesviewer.utils import *
 from eotimeseriesviewer.main import TimeSeriesViewer
 from eotimeseriesviewer.mapvisualization import *
 from eotimeseriesviewer.profilevisualization import *
 from eotimeseriesviewer.timeseries import *
 from eotimeseriesviewer import DIR_REPO, DIR_QGIS_RESOURCES
+
+
 
 DIR_SCREENSHOTS = jp(DIR_REPO, 'doc/source/img/autogenerated2.{}'.format(sys.platform))
 
@@ -24,6 +27,7 @@ SIZE_MAPCANVAS = QSize(200, 150)
 REF_DATE_LS = np.datetime64('2014-06-24')
 REF_DATE_RE = np.datetime64('2014-06-25')
 
+TEMPORAL_PROFILE_LOCATIONS = 5
 
 TSV = TimeSeriesViewer()
 TSV.show()
@@ -146,9 +150,11 @@ if __name__ == '__main__':
     vectorLayers = [l for l in QgsProject.instance().mapLayers().values() if isinstance(l, QgsVectorLayer)]
     vlNames = [l.name() for l in vectorLayers]
     # make testdata "exampleEvents" polygon fill-color transparent
-    vl = vectorLayers[vlNames.index('exampleEvents')]
-    assert isinstance(vl, QgsVectorLayer)
-    symbolLayer = vl.renderer().symbol().symbolLayer(0)
+    vlEventPolygons = vectorLayers[0]
+    vlPOIs = vectorLayers[1]
+
+    assert isinstance(vlEventPolygons, QgsVectorLayer)
+    symbolLayer = vlEventPolygons.renderer().symbol().symbolLayer(0)
     assert isinstance(symbolLayer, QgsFillSymbolLayer)
     symbolLayer.setBrushStyle(Qt.NoBrush)
     symbolLayer.setStrokeColor(QColor('yellow'))
@@ -170,7 +176,7 @@ if __name__ == '__main__':
     for c in mapView1.mapCanvases():
         assert isinstance(c, MapCanvas)
         if c.tsd() == REF_TSD_LS:
-            setBandCombination(c, 3,2,1)
+            setBandCombination(c, 3, 2, 1)
         elif c.tsd() == REF_TSD_RE:
             setBandCombination(c, 3, 2, 1)
 
@@ -182,7 +188,18 @@ if __name__ == '__main__':
             setBandCombination(c, 5, 4, 3)
 
     # load temporal profiles
-    TSV.spectralTemporalVis.loadCoordinate()
+
+    points = []
+
+    for i, feature in enumerate(vlPOIs.getFeatures()):
+        if i >= TEMPORAL_PROFILE_LOCATIONS:
+            break
+
+        assert isinstance(feature, QgsFeature)
+        pt = feature.geometry().centroid().asPoint()
+        points.append(SpatialPoint(vlPOIs.crs(), pt))
+
+    TSV.spectralTemporalVis.loadCoordinate(points)
 
     mapProperties('mapviewdock_map.png')
     mapViews('mapviews.png')
