@@ -6,6 +6,7 @@ Changelog
     * map canvas context menu "Focus on Spatial Extent" will hide maps without time series data for the current spatial extent
     * labeling dock allows to iterate over vector features. the spatial map extent will be centered to each feature (#26)
     * added several convenience function to TimeSeriesViewer object
+    * fixed a bug that did not allow to create new polygon features
     * updated SpectralLibraryViewer
 
 2019-06-12 (version 1.3):
